@@ -87,7 +87,7 @@ void CMathTest::test()
   CPPUNIT_CHECK( are_equals(std::exp(0.0), 1.0) );
   CPPUNIT_CHECK( are_equals(std::log(std::exp(1.0)), 1.0) );
   CPPUNIT_CHECK( are_equals(std::log10(100.0), 2.0) );
-#if !defined (_WIN64)
+#if !defined (STLPORT) || !defined (_STLP_USING_PLATFORM_SDK_COMPILER) || !defined (_WIN64)
   CPPUNIT_CHECK( are_equals(std::modf(100.5, &double_val), 0.5) );
 #endif
   CPPUNIT_CHECK( are_equals(double_val, 100.0) );
@@ -100,7 +100,9 @@ void CMathTest::test()
   CPPUNIT_CHECK( are_equals(std::tan(std::atan2(1.0, 1.0)), 1.0) );
   CPPUNIT_CHECK( are_equals(std::cosh(0.0), 1.0) );
   CPPUNIT_CHECK( are_equals(std::sinh(0.0), 0.0) );
+#if !defined (STLPORT) || !defined (_STLP_USING_PLATFORM_SDK_COMPILER) || !defined (_M_AMD64)
   CPPUNIT_CHECK( are_equals(std::tanh(0.0), 0.0) );
+#endif
 
   CPPUNIT_CHECK( are_equals(std::floor(1.5f), 1.0f) );
   CPPUNIT_CHECK( are_equals(std::ceil(1.5f), 2.0f) );
@@ -110,7 +112,7 @@ void CMathTest::test()
   CPPUNIT_CHECK( are_equals(std::exp(0.0f), 1.0f) );
   CPPUNIT_CHECK( are_equals(std::log(std::exp(1.0f)), 1.0f) );
   CPPUNIT_CHECK( are_equals(std::log10(100.0f), 2.0f) );
-#if !defined (_WIN64)
+#if !defined (STLPORT) || !defined (_STLP_USING_PLATFORM_SDK_COMPILER) || !defined (_WIN64)
   CPPUNIT_CHECK( are_equals(std::modf(100.5f, &float_val), 0.5f) );
 #endif
   CPPUNIT_CHECK( are_equals(float_val, 100.0f) );
@@ -123,7 +125,9 @@ void CMathTest::test()
   CPPUNIT_CHECK( are_equals(std::tan(std::atan2(1.0f, 1.0f)), 1.0f) );
   CPPUNIT_CHECK( are_equals(std::cosh(0.0f), 1.0f) );
   CPPUNIT_CHECK( are_equals(std::sinh(0.0f), 0.0f) );
+#if !defined (STLPORT) || !defined (_STLP_USING_PLATFORM_SDK_COMPILER) || !defined (_M_AMD64)
   CPPUNIT_CHECK( are_equals(std::tanh(0.0f), 0.0f) );
+#endif
 
 #if !defined (_STLP_NO_LONG_DOUBLE)
   CPPUNIT_CHECK( are_equals(std::floor(1.5l), 1.0l) );
@@ -134,7 +138,7 @@ void CMathTest::test()
   CPPUNIT_CHECK( are_equals(std::exp(0.0l), 1.0l) );
   CPPUNIT_CHECK( are_equals(std::log(std::exp(1.0l)), 1.0l) );
   CPPUNIT_CHECK( are_equals(std::log10(100.0l), 2.0l) );
-#  if !defined (_WIN64)
+#  if !defined (STLPORT) || !defined (_STLP_USING_PLATFORM_SDK_COMPILER) || !defined (_WIN64)
   CPPUNIT_CHECK( are_equals(std::modf(100.5l, &long_double_val), 0.5l) );
 #  endif
   CPPUNIT_CHECK( are_equals(long_double_val, 100.0l) );
@@ -148,7 +152,9 @@ void CMathTest::test()
   CPPUNIT_CHECK( are_equals(std::atan2(0.0l, 1.0l), 0.0l) );
   CPPUNIT_CHECK( are_equals(std::cosh(0.0l), 1.0l) );
   CPPUNIT_CHECK( are_equals(std::sinh(0.0l), 0.0l) );
+#  if !defined (STLPORT) || !defined (_STLP_USING_PLATFORM_SDK_COMPILER) || !defined (_M_AMD64)
   CPPUNIT_CHECK( are_equals(std::tanh(0.0l), 0.0l) );
+#  endif
 #endif
 
   CPPUNIT_CHECK( are_equals(std::sqrt(std::sqrt(std::sqrt(256.0))), 2.0) );
