@@ -1,3 +1,13 @@
+2005-08-11  Francois Dumont  <dums@stlport...>
+
+	* stlport/stl_user_config.h: Add _STLP_USING_PLATFORM_SDK_COMPILER so that
+	STLport user can signal they are using platform SDK compiler.
+
+	* stlport/config/stl_msvc.h: Add use of _STLP_USING_PLATFORM_SDK_COMPILER.
+
+	* test/unit/cmath_test.cpp, valarray_test.cpp: Removed tanh calls when using
+	AMD 64 platform SDK compiler, looks like they miss something...
+
 2005-08-09  Francois Dumont  <dums@stlport...>
 
 	* src/fstream.cpp: Final fix of basic_filebuf::open method. Now when open
